--- a/styles/common.css
+++ b/styles/common.css
@@ -10,10 +10,10 @@ html, body {
 .ui-common{
     margin-left: auto;
     margin-right: auto;
-    /*width: 1000px;*/
-    height: calc(100% - 102px);
+    /* width: 1000px; */
+    min-height: calc(100% - 60px);
     box-sizing: border-box;
-    /*border: 1px solid #444444;*/
+    /* border: 1px solid #444444; */
 }
 
 div{
@@ -29,6 +29,11 @@ div{
 @font-face {
     font-family: CFB;
     src: url(fonts/CRC65.otf);
+}
+
+@font-face {
+    font-family: CR;
+    src: url(fonts/Circe-Regular.ttf);
 }
 
 .ui-background{
