--- a/styles/item_block.css
+++ b/styles/item_block.css
@@ -6,10 +6,11 @@
     box-sizing: border-box;
     display: inline-block;
     margin: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     background: #fff;
     box-shadow: 2px 2px 7px rgba(55,55,55,0.1);
     cursor: pointer;
+    position: relative;
 }
 
 .ui-item-block:hover{
@@ -56,4 +57,124 @@
     background-repeat: no-repeat;
     background-position: 17%;
     background-size: 10%;
+}
+
+
+.ui-item-level-first{
+    position: relative;
+    height: 100%;
+}
+.ui-item-icon{
+    padding-top: 15px;
+    width: 100%;
+    height: 150px;
+    position: absolute;
+}
+.ui-item-icon-img{
+    display: block;
+    margin: 0 auto;
+    border: none;
+}
+.ui-item-title{
+    width: 100%;
+    position: absolute;
+    top: 175px;
+}
+.ui-item-title-text{
+    display: block;
+    margin: 0 auto;
+    border: none;
+    width: 170px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 15px;
+}
+.ui-item-title-price-amount{
+    color: #4de5f6;
+    font-size: 16px;
+}
+.ui-item-title-price-currency{
+    color: #c0c0c0;
+    font-size: 16px;
+}
+.ui-item-interactive{
+    border-top: 1px solid #e2e2e2;
+    height: 40px;
+    background: #fbfbfb;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    padding: 10px 6px;
+    bottom: 0px;
+}
+
+.ui-item-interactive-item{
+    width: 48px;
+    height: 20px;
+}
+.ui-item-interactive-item div{
+    /*border: 1px solid #0087fe;*/
+}
+.ui-ib-icon{
+    background-repeat: no-repeat;
+    background-position-x: 40%;
+    background-position-y: 40%;
+    background-size: 75%;
+    background-origin: border-box;
+    width: 19px;
+    height: 19px;
+}
+.ui-ib-count{
+    width: 29px;
+    height: 19px;
+    font-family: CR;
+    color: #8e8a8a;
+    font-size: 13px;
+    padding-top: 1px;
+}
+.ui-ib-icon-rating{
+    background-image: url(../images/icons/reiting.svg);
+}
+.ui-ib-icon-likes{
+    background-position-y: 12%;
+    background-image: url(../images/icons/Like.svg);
+}
+.ui-ib-icon-comments{
+    background-position-y: 96%;
+    background-image: url(../images/icons/Comment.svg);
+}
+
+.ui-item-level-second{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+}
+.ui-item-sale{
+    background: #3fbd26;
+    border-radius: 5px;
+    width: auto;
+    color: #fff;
+    padding: 5px 5px 3px 5px;
+    font-size: 12px;
+    margin-left: 10px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+}
+.ui-item-like{
+    background-color: #f00;
+    background-image: url(../images/icons/Serdce.svg);
+    background-repeat: no-repeat;
+    background-position-x: 50%;
+    background-position-y: 57%;
+    background-size: 65%;
+    background-origin: border-box;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    box-shadow: 0 0 6px rgba(0,0,0,0.5);
+    margin-right: 7px;
+    margin-top: 8px;
 }
