--- a/styles/item_block.css
+++ b/styles/item_block.css
@@ -63,6 +63,7 @@
 .ui-item-level-first{
     position: relative;
     height: 100%;
+    overflow: hidden;
 }
 .ui-item-icon{
     padding-top: 15px;
