--- a/styles/common.css
+++ b/styles/common.css
@@ -54,6 +54,10 @@ div{
     box-sizing: border-box;
 }
 
+.g-fs {
+    width: 100%;
+    height: 100%;
+}
 .gf-cb {
    font-family: CFB !important;
 }
@@ -61,3 +65,4 @@ div{
 .gf-cr {
     font-family: CR !important;
 }
+
